# mlx-transcribe

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mlx_transcribe.py  pyproject.toml  transcriber.py
.claude/: README.md  SETUP_SUMMARY.md  settings.json
.claude/hooks/: format-python.sh
