[project]
name = "transcriber"
version = "0.1.0"
description = "Fast transcription tool supporting 1700+ sites (YouTube, X/Twitter, TikTok, etc.)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "yt-dlp>=2023.0.0",
    "mlx-whisper>=0.4.0",
    "av>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
transcribe = "transcriber:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
